Dieser Branch ist noch in Entwicklung und noch nicht für den produktiven Einsatz geeignet!!

dev05:
    - PG Detail-Statistiken hinzugefügt

 dev06/07:
    - Optik der PG Detail-Statistiken angepasst

dev08:
    - padding in Footer verringert, so dass keine unnötigen Scrollbalken erscheinen

dev09:
    - Link zum Hilfe-Thread im SG-Forum in der Navbar eingefügt