@@ -101,12 +101,23 @@ table, th, tr, td {
 	text-align: right;
 }
 
+
 table.dataTable {
 	clear: both;
 	margin-top: 0px !important;
 	margin-bottom: 6px !important;
 	max-width: none !important;
 	border-collapse: separate !important;
+}
+
+table.dataTable thead th, table.dataTable thead td {
+	padding: 10px 18px;
+	border-bottom: none;
+}
+
+table.dataTable tfoot th, table.dataTable tfoot td {
+	padding: 10px 18px 6px 18px;
+	border-top: 1px solid #1111111c;
 }
 
 #table_tasks {
